crates/test-files/fixtures/compile_errors/call_create_with_wrong_type.fe
use std::context::Context

contract Bar {}

contract Foo {
    pub fn foo(ctx: Context) {
        Bar.create(ctx, true)
        Bar.create(ctx)     # agroce #447
    }
}
